# telegram-rust

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/src/telegram_rust/: db.rs.html  main.rs.html
docs/src/telegram_rust/commands/: chart.rs.html  currency.rs.html  mod.rs.html  price.rs.html  price_all.rs.html  send_all.rs.html  start.rs.html
docs/src/telegram_rust/handlers/: currency.rs.html  mod.rs.html
docs/src/telegram_rust/models/: mod.rs.html  user.rs.html
docs/src/telegram_rust/tests/: mod.rs.html  twitter_tests.rs.html
docs/src/telegram_rust/tools/: mod.rs.html  parse_currency.rs.html  parse_text.rs.html  parse_twitter.rs.html
docs/telegram-rust/: all.html  fn.connect_to_db.html  fn.main.html  index.html  sidebar-items.js
docs/telegram-rust/commands/: index.html  sidebar-items.js
docs/telegram-rust/db/: index.html  sidebar-items.js  struct.DatabaseManager.html
docs/telegram-rust/handlers/: index.html
docs/telegram-rust/models/: index.html  sidebar-items.js
docs/telegram-rust/tests/: index.html  sidebar-items.js
docs/telegram-rust/tools/: index.html  sidebar-items.js
docs/telegram_rust/: fn.main.html  index.html  sidebar-items.js
docs/telegram_rust/commands/: index.html
docs/telegram_rust/db/: index.html
src/: db.rs  main.rs
src/commands/: chart.rs  currency.rs  gas.rs  mod.rs  notify.rs  price.rs  price_all.rs  send_all.rs  send_gas.rs  set_gas.rs  start.rs
src/handlers/: currency.rs  mod.rs
src/models/: errors.rs  user.rs
src/tests/: currency_tests.rs  mod.rs  twitter_tests.rs
src/tools/: mod.rs  parse_currency.rs  parse_eden.rs  parse_text.rs  parse_twitter.rs
(+62 files in other folders)
