[package]
name = "telegram-rust"
version = "0.1.0"
edition = "2021"
description = "Telegram bot for Rust"
repository = "https://github.com/murmaider227/telegram-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
