[package]
name = "telegram-rust"
version = "0.1.0"
edition = "2021"
description = "Telegram bot for Rust"
repository = "https://github.com/murmaider227/telegram-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = { version = "0.4", features = ["std"] }
flexi_logger = "0.25.3"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
bytes = "1.0"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
env_logger = "0.10.0"
chrono-tz = "0.8.1"
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
futures = "0.3"
