[package]
name = "telegram-rust"
version = "1.0.2"
edition = "2021"
description = "Telegram bot for Rust"
authors = ["murmaider227 <osakihor@gmail.com>"]
repository = "https://github.com/murmaider227/telegram-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = { version = "0.4", features = ["std"] }
flexi_logger = "0.25.3"
tokio = { version =  "1.28", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
bytes = "1.4"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
chrono-tz = "0.8.2"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
futures = "0.3"
regex="1.8.1"
